--- a/app/static/css/usuarios.css
+++ b/app/static/css/usuarios.css
@@ -3,7 +3,7 @@ h2 {
     font-size: 2rem;
     font-weight: 700;
     margin-bottom: 1.5rem;
-    color: var(--azul);
+    color: var(--color-primario-oscuro);
     text-align: center;
 }
 
@@ -18,7 +18,6 @@ hr {
 
 /* -------- CONTENEDOR PRINCIPAL -------- */
 main {
-    background-color: var(--card);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
     border-radius: 12px;
     padding: 2.5rem;
@@ -58,11 +57,12 @@ th {
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
+    text-align: center;
 }
 
 td {
-    color: var(--gris-texto);
     vertical-align: top;
+    text-align: center;
 }
 
 tr:nth-child(even) {
@@ -177,25 +177,47 @@ td:nth-child(9) {
 
 .form-usuario input {
     padding: 0.9rem 1rem;
-    border: 1px solid var(--borde);
+    border: 1px solid var(--color-borde);
     border-radius: 8px;
     font-size: 1rem;
     background-color: #fff;
-    transition: all 0.2s;
+    transition: border 0.2s ease, box-shadow 0.2s ease;
     margin-bottom: 0.8rem;
 }
 
-.form-usuario input:focus {
-    outline: none;
+/* Estilo al enfocar (solo si no hay error) */
+.form-usuario input:focus:not(.input-error) {
     border-color: var(--color-primario);
     box-shadow: 0 0 6px rgba(72, 159, 181, 0.4);
+    outline: none;
 }
 
-/* -------- MENSAJES DE ERROR -------- */
+/* Estilo de error */
+input.input-error {
+    border-color: var(--rojo-error) !important;
+    box-shadow: 0 0 6px rgba(255, 0, 0, 0.3);
+    outline: none !important;
+}
+
+/* Al enfocar un input con error */
+input.input-error:focus {
+    border-color: var(--rojo-error) !important;
+    box-shadow: 0 0 6px rgba(255, 0, 0, 0.5) !important;
+}
+
+/* Quitar flechas de los inputs tipo number */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Mensajes de error */
 .error {
     color: var(--rojo-error);
     font-size: 0.85rem;
-    margin-top: 0.4rem;
+    margin-top: -0.4rem;
+    margin-bottom: 0.6rem;
     font-weight: 500;
 }
 
